# web_scrapping_python

./: .gitignore  Readme.md  config.ini  entrypoint.py  pyproject.toml
src/factory/: WebDriverFactory.py  __init__.py
src/gateway/: Scrapper.py  __init__.py
src/infraestructure/: Container.py  DriverWebEnum.py  ErrorEnum.py  __init__.py  config.py  custom_error.py
src/services/: ScrapperService.py  __init__.py
tests/: test_scrapper_service.py
