[tool.poetry]
name = "promotion-python"
version = "0.1.0"
description = "Technical test"
authors = ["Carlos Santos <chsfbenjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium-recaptcha-solver = "^1.9.0"
fastapi = "^0.108.0"
lagom = "^2.6.0"
uvicorn = "^0.25.0"
ffmpeg-downloader = "^0.3.0"
pytest = "^7.4.4"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
